# bingo-server

./: README.md
backend/: .gitignore  Cargo.toml  README.md
backend/src/: domain.rs  handlers.rs  main.rs  rng.rs  state.rs
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  SPECIFICATION.md  USER_MANUAL.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: AmidaBoard.vue  AmidaSetup.vue  BingoControls.vue  BingoDisplay.vue  BingoHistory.vue  SnowEffect.vue
frontend/src/composables/: useAmida.ts  useAmidaGame.ts  useAudio.ts  useBingoGame.test.ts  useBingoGame.ts  useDrumRoll.ts
frontend/src/router/: index.ts
frontend/src/services/: amidaApi.ts  bingoApi.ts
frontend/src/views/: AmidaView.vue  BingoView.vue
