[package]
name = "backend"
edition = "2021"
version = "0.1.0"
description = "Christmas Bingo System Backend Server"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
